# Donation-Tracker

./: .gitignore  Makefile  README.md  alembic.ini  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_10_05_1339-e361dc7a3eee_initial.py  2024_10_06_1432-fc86fcb85556_update_charity_.py  2024_10_06_1439-ce0768ea22f5_update_charity_.py  2024_10_06_1442-a7833bb152f0_update_charity_.py  2024_10_06_1447-71737fd34227_update_charity_.py  2024_10_08_1717-d40a0bb8bc43_initial.py  2024_10_09_1608-94d077477562_update_models.py  2024_10_20_1255-6343bda414ad_update_models.py
app/: main.py  models.py
app/api/: dependencies.py  router.py  routers.py  validators.py
app/api/endpoints/: auth.py  charity_project.py  donation.py  project.py  user.py
app/core/: base.py  constants.py  db.py  settings.py  user.py
app/crud/: __init__.py  base.py  charity_project.py  donation.py
app/models/: __init__.py  abstract.py  base.py  charity_project.py  donation.py  project.py  user.py
app/schemas/: charity_project.py  donation.py  project.py
app/services/: __init__.py  crud.py  investment.py  types.py
